prod_snapshot_2015-09-24_1030/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Has_30_Sec__c</fullName>
        <formula>IF(Lead.Has_30_Second__c = True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has 30 Sec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion_Source__c</fullName>
        <label>Promotion Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Results__c</fullName>
        <label>Survey Results</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Answers__c</fullName>
        <inlineHelpText>Text of attendee custom questions and answers, if any.</inlineHelpText>
        <label>Eventbrite Answers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Attendees_Checked_In__c</fullName>
        <inlineHelpText>Number of attendees who were checked in for the event via Eventbrite mobile app or website.</inlineHelpText>
        <label>Eventbrite Attendees Checked In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Barcodes__c</fullName>
        <inlineHelpText>One or more Eventbrite barcodes for this campaign member, separated by semicolons.</inlineHelpText>
        <label>Eventbrite Barcodes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Checkins__c</fullName>
        <inlineHelpText>Barcodes for this campaign member that were checked-in, separated by semicolons.</inlineHelpText>
        <label>Eventbrite Barcodes Checked In</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Date_and_Time__c</fullName>
        <inlineHelpText>Date and time of the Eventbrite event for this ticket.</inlineHelpText>
        <label>Eventbrite Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Ticket_Quantity__c</fullName>
        <inlineHelpText>Number of tickets registered to this attendee.</inlineHelpText>
        <label>Eventbrite Ticket Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Ticket_Type__c</fullName>
        <inlineHelpText>Type of Eventbrite ticket(s) ordered by this attendee.</inlineHelpText>
        <label>Eventbrite Ticket Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Survey</fullName>
        <active>true</active>
        <label>Survey</label>
    </recordTypes>
</CustomObject>